--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B23MEPRCZX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B23MEPRCZX');
+</script>
     <meta charset="UTF-8" />
     <!-- Primary Meta Tags -->
     <title>Squish - Batch Browser-based Image Compression</title>
-    <meta name="title" content="Squish - Browser-based Image Compression">
-    <meta name="description" content="Fast, efficient batch image compression right in your browser. Supports AVIF, JPEG, JXL, PNG, and WebP formats with adjustable quality settings.">
-    <meta name="keywords" content="image, compression, squish, batch, avif, jpeg, jxl, png, webp, quality, lossless, lossy, browser, web, app, tool, utility, free, open-source, fast, efficient, simple, easy, fast, quick, online, offline, pwa, progressive, web, application, webapp, web-app">
+    <meta name="title" content="Imgsquash.com | Free Online Image Compressor">
+    <meta name="description" content="Compress your images online for free with Imgsquash. Optimize JPG, PNG, and WebP files without losing quality. Fast and easy to use.">
+    <meta name="keywords" content="online image compressor, image compression tool, compress images online, free image compressor, image optimizer, reduce image size online, PNG compressor, JPEG compressor, WebP converter, batch image compression, best free online image compressor, how to compress images for web, online image compression without quality loss, fastest online image compressor, image compression for email, compress images for social media, online tool to shrink images, optimize images for SEO, image compression for WordPress, lossless image compression online">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="icon" type="image/png" sizes="128x128" href="/image-128x128.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/image-512x512.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/image-512x512.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="/icon.svg" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon.svg" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/icon.svg">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://squish.addy.ie">
-    <meta property="og:title" content="Squish - Batch Browser-based Image Compression">
-    <meta property="og:description" content="Fast, efficient batch image compression right in your browser. Supports AVIF, JPEG, JXL, PNG, and WebP formats with adjustable quality settings.">
-    <meta property="og:image" content="https://squish.addy.ie/meta.jpg">
+    <meta property="og:url" content="https://imgsquash.com">
+    <meta property="og:title" content="Imgsquash.com | Free Online Image Compressor">
+    <meta property="og:description" content="Compress your images online for free with Imgsquash. Optimize JPG, PNG, and WebP files without losing quality. Fast and easy to use.">
+    <meta property="og:image" content="https://imgsquash.com/img-squash-hp.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://squish.addy.ie">
-    <meta property="twitter:title" content="Squish - Batch Browser-based Image Compression">
-    <meta property="twitter:description" content="Fast, efficient batch image compression right in your browser. Supports AVIF, JPEG, JXL, PNG, and WebP formats with adjustable quality settings.">
-    <meta property="twitter:image" content="https://squish.addy.ie/meta.jpg">
+    <meta property="twitter:url" content="https://imgsquash.com">
+    <meta property="twitter:title" content="Imgsquash.com | Free Online Image Compressor">
+    <meta property="twitter:description" content="Compress your images online for free with Imgsquash. Optimize JPG, PNG, and WebP files without losing quality. Fast and easy to use.">
+    <meta property="twitter:image" content="https://imgsquash.com/img-squash-hp.webp">
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#18181b">
