privacy, terms and basic SEO

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8" />
     <!-- Primary Meta Tags -->
-    <title>Squish - Batch Browser-based Image Compression</title>
+    <title>Imgsquash.com | Free Online Image Compressor</title>
     <meta name="title" content="Imgsquash.com | Free Online Image Compressor">
     <meta name="description" content="Compress your images online for free with Imgsquash. Optimize JPG, PNG, and WebP files without losing quality. Fast and easy to use.">
     <meta name="keywords" content="online image compressor, image compression tool, compress images online, free image compressor, image optimizer, reduce image size online, PNG compressor, JPEG compressor, WebP converter, batch image compression, best free online image compressor, how to compress images for web, online image compression without quality loss, fastest online image compressor, image compression for email, compress images for social media, online tool to shrink images, optimize images for SEO, image compression for WordPress, lossless image compression online">
