--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="icon" type="image/png" sizes="128x128" href="/icon.svg" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icon.svg" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/android-chrome-128x128.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="512x512" href="/icon.svg">
 
     <!-- Open Graph / Facebook -->
@@ -30,6 +33,7 @@
     <meta property="og:title" content="Imgsquash.com | Free Online Image Compressor">
     <meta property="og:description" content="Compress your images online for free with Imgsquash. Optimize JPG, PNG, and WebP files without losing quality. Fast and easy to use.">
     <meta property="og:image" content="https://imgsquash.com/img-squash-hp.webp">
+    <meta property="og:site_name" content="Imgsquash.com | Free Online Image Compressor">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
